@@ -1559,19 +1559,6 @@ EOD;
 	}
 
 	/**
-	 * Returns the element ID that is used by methods such as {@link activeTextField}.
-	 * This method has been deprecated since version 1.0.5. Please use {@link activeId} instead.
-	 * @param CModel $model the data model
-	 * @param string $attribute the attribute
-	 * @return string the element ID for the active field corresponding to the specified model and attribute.
-	 * @deprecated 1.0.5
-	 */
-	public static function getActiveId($model,$attribute)
-	{
-		return self::activeId($model,$attribute);
-	}
-
-	/**
 	 * Displays a summary of validation errors for one or several models.
 	 * @param mixed $model the models whose input errors are to be displayed. This can be either
 	 * a single model or an array of models.
