@@ -20,6 +20,7 @@ Version 1.1.9 work in progress
 - Chg: Upgraded jQuery to 1.7 (Sam Dark,mdomba)
 - Chg: Reverted back the changes made to fix issue 2284 (Qiang)
 - Chg #2647: Fixed inconvenient way of defining through relation (creocoder, Sam Dark)
+- Chg #2951: Removed CConfiguration::createObject, CController::paginate and CHtml::getActiveId deprecated since 1.0.x (Sam Dark)
 - Enh #2029: Added scope support to Model::relations() (creocoder, Sam Dark)
 - Enh #2334: CHttpRequest::getPathInfo() now properly decodes both UTF-8 and ISO-8859-1 encoded URIs (Sam Dark)
 - Enh #2387: Numeric keys are now displayed in error/exception stacktrace call argument if array isn't 0..X indexed (Sam Dark)
